k8s_configs/visit_man/visit_man_service.yml
apiVersion: v1
kind: Service
metadata:
  name: visit-man-service
  namespace: visit-man-ns
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 80
      targetPort: 8082
      protocol: TCP
  selector:
    app: visit-man
  type: NodePort
